# 0806_SI_MMG

0709_Baysian_MMG/: CMakeLists.txt  MMG_model.f90  README.md  cmaes.f90  eigen.f90  main.f90  problem_SI.f90  random.f90  settings.txt
0709_Baysian_MMG/inputfiles/: InitCmaes57.txt  InitProblem57.txt  random_train_file_list copy.txt  random_train_file_list.txt
0709_Baysian_MMG/post_scripts/: Right_MMGLS.m  SaveFig.m  compute_state.m  draw_traj_figure.m  mkfigure_CMAES_itr.m  postprocess_eachcase.m  postprocess_main_SI.m  read_outputcmaes.m  run_many_postcodes.m  save_mmgparams_tocsv.m  statistical_analysis_randomseed.m  update_coeff.m
